Update readme with correct signed transaction fields

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 chainId: 3,
                 v: {{'0x' + signedLegacySample.v.toString('hex')}},
                 r: {{'0x' + signedLegacySample.r.toString('hex')}},
-                s: {{'0x' + signedLegacySample.v.toString('hex')}}
+                s: {{'0x' + signedLegacySample.s.toString('hex')}}
               }</code>
         </div>
         <p>Recovered address: {{recoveredLegacyAddress}}</p>
@@ -80,7 +80,7 @@
                 chainId: 3,
                 v: {{'0x' + signedEIP1559Sample.v.toString('hex')}},
                 r: {{'0x' + signedEIP1559Sample.r.toString('hex')}},
-                s: {{'0x' + signedEIP1559Sample.v.toString('hex')}}
+                s: {{'0x' + signedEIP1559Sample.s.toString('hex')}}
               }</code>
         </div>
         <p>Recovered address: {{recoveredEIP1559Address}}</p>
