--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 value: '0x00',
                 data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057',
                 chainId: 3,
-                v: {{'0x' + signedLegacySample.v.toString('hex')}},
-                r: {{'0x' + signedLegacySample.r.toString('hex')}},
-                s: {{'0x' + signedLegacySample.s.toString('hex')}}
+                v: {{getHex(signedLegacySample.v)}},
+                r: {{getHex(signedLegacySample.r)}},
+                s: {{getHex(signedLegacySample.s)}}
               }</code>
         </div>
         <p>Recovered address: {{recoveredLegacyAddress}}</p>
@@ -72,15 +72,15 @@
                 nonce: '0x00',
                 type: 2,
                 gasPrice: '0x09184e72a000',
-                maxPriorityFeePerGas: '0x09184e72a000', // not an accurate price
-                maxFeePerGas: '0x09184e72a000', // not an accurate price
+                maxPriorityFeePerGas: '0x09184e72a000', 
+                maxFeePerGas: '0x09184e72a000', 
                 to: '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6',
                 value: '0x00',
                 data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057',
                 chainId: 3,
-                v: {{'0x' + signedEIP1559Sample.v.toString('hex')}},
-                r: {{'0x' + signedEIP1559Sample.r.toString('hex')}},
-                s: {{'0x' + signedEIP1559Sample.s.toString('hex')}}
+                v: {{getHex(signedEIP1559Sample.v)}},
+                r: {{getHex(signedEIP1559Sample.r)}},
+                s: {{getHex(signedEIP1559Sample.s)}}
               }</code>
         </div>
         <p>Recovered address: {{recoveredEIP1559Address}}</p>
