--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Generating Ethereum Accounts</title>
-    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet" />
+    <link rel="stylesheet" href="main.css" />
     <title>Generating ETH accounts</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
@@ -14,13 +14,16 @@
       <div>
         <div><button v-on:click="generateNew">Generate New Mnemonic</button></div>
         Mnemonic: <textarea v-model="mnemonic"></textarea>
-        <p>**Note that in this demonstration application, this mnemonic will generate different sets of keys than
-          <a href="https://metamaks.io">Metamask</a> 
-          or <a href="https://myetherwallet.com">My Ether Wallet.</a>**</p>
+        <p>
+          **Note that in this demonstration application, this mnemonic will generate different sets
+          of keys than
+          <a href="https://metamaks.io">Metamask</a>
+          or <a href="https://myetherwallet.com">My Ether Wallet.</a>**
+        </p>
       </div>
       <div v-if="privKey !== ''">
         <p>Private Key: {{privKey.toString('hex')}}</p>
-        <p>Public Key:  {{pubKey.toString('hex')}}</p>
+        <p>Public Key: {{pubKey.toString('hex')}}</p>
         <p>Ethereum address: {{ETHaddress}}</p>
         <button v-on:click="signSampleLegacyTx">Sign sample Legacy transaction</button>
         <button v-on:click="signSampleEIP1559Tx">Sign sample EIP1559 transaction</button>
@@ -28,60 +31,40 @@
       <div v-if="recoveredLegacyAddress !== ''">
         <h3>Legacy Transaction</h3>
         <code>
-            { nonce: '0x00',
-            gasPrice: '0x09184e72a000', 
-            gasLimit: '0x2710',
-            to: '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6', 
-            value: '0x10', 
-            data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057',
-            chainId: 3 }
+          { nonce: '0x00', gasPrice: '0x09184e72a000', gasLimit: '0x2710', to:
+          '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6', value: '0x10', data:
+          '0x7f7465737432000000000000000000000000000000000000000000000000000000600057', chainId: 3 }
         </code>
-        <br><br>
+        <br /><br />
         <div>
-            <code>Signed raw tx: {
-                nonce: '0x00',
-                gasPrice: '0x09184e72a000',
-                gasLimit: '0x2710',
-                to: '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6',
-                value: '0x00',
-                data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057',
-                chainId: 3,
-                v: {{getHex(signedLegacySample.v)}},
-                r: {{getHex(signedLegacySample.r)}},
-                s: {{getHex(signedLegacySample.s)}}
-              }</code>
+          <code
+            >Signed raw tx: { nonce: '0x00', gasPrice: '0x09184e72a000', gasLimit: '0x2710', to:
+            '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6', value: '0x00', data:
+            '0x7f7465737432000000000000000000000000000000000000000000000000000000600057', chainId:
+            3, v: {{getHex(signedLegacySample.v)}}, r: {{getHex(signedLegacySample.r)}}, s:
+            {{getHex(signedLegacySample.s)}} }</code
+          >
         </div>
         <p>Recovered address: {{recoveredLegacyAddress}}</p>
       </div>
       <div v-if="recoveredEIP1559Address !== ''">
         <h3>EIP1559 Transaction</h3>
         <code>
-            { nonce: '0x00',
-            type: 2,
-            maxPriorityFeePerGas: '0x09184e72a000', // not an accurate price
-            maxFeePerGas: '0x09184e72a000', // not an accurate price
-            gasLimit: '0x2710',
-            to: '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6', 
-            value: '0x10', 
-            data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057',
-            chainId: 3 }
-        </code>        
-        <br><br>
+          { nonce: '0x00', type: 2, maxPriorityFeePerGas: '0x09184e72a000', // not an accurate price
+          maxFeePerGas: '0x09184e72a000', // not an accurate price gasLimit: '0x2710', to:
+          '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6', value: '0x10', data:
+          '0x7f7465737432000000000000000000000000000000000000000000000000000000600057', chainId: 3 }
+        </code>
+        <br /><br />
         <div>
-            <code>Signed raw EIP1559 tx: {
-                nonce: '0x00',
-                type: 2,
-                gasPrice: '0x09184e72a000',
-                maxPriorityFeePerGas: '0x09184e72a000', 
-                maxFeePerGas: '0x09184e72a000', 
-                to: '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6',
-                value: '0x00',
-                data: '0x7f7465737432000000000000000000000000000000000000000000000000000000600057',
-                chainId: 3,
-                v: {{getHex(signedEIP1559Sample.v)}},
-                r: {{getHex(signedEIP1559Sample.r)}},
-                s: {{getHex(signedEIP1559Sample.s)}}
-              }</code>
+          <code
+            >Signed raw EIP1559 tx: { nonce: '0x00', type: 2, gasPrice: '0x09184e72a000',
+            maxPriorityFeePerGas: '0x09184e72a000', maxFeePerGas: '0x09184e72a000', to:
+            '0x31c1c0fec59ceb9cbe6ec474c31c1dc5b66555b6', value: '0x00', data:
+            '0x7f7465737432000000000000000000000000000000000000000000000000000000600057', chainId:
+            3, v: {{getHex(signedEIP1559Sample.v)}}, r: {{getHex(signedEIP1559Sample.r)}}, s:
+            {{getHex(signedEIP1559Sample.s)}} }</code
+          >
         </div>
         <p>Recovered address: {{recoveredEIP1559Address}}</p>
       </div>
